--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "fbf61309-a471-4e0c-b865-cb53efb002e5"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
